static/Tutorial.scss
@import "Common.scss";

.Tutorial {
  z-index: 100 !important;
  // display: inline-block;
  position: sticky;
  background-color: $color-bg-extra-light;
  padding: $padding-medium;
  margin-right: 5 + $padding-extra-large;
  float: right;
  clear: both;
  border: 2px solid $color-highlight;
  text-overflow: ellipsis;
  text-align: left;
  width: 11 * $padding-medium;

  .Title {
    font-size: $font-size-header;
    font-weight: bold;
  }

  .Nav {
    button {
      margin-top: $padding-tiny;
      margin-right: $padding-tiny;
    }

    .Button-ToPrev {}
    .Button-ToNext {}
    .Button-Finish {}
    .Button-MarkCompleted {
      background-color: lightgray;
      border: none;
    }
  }
}

